--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+
+  <script src="config.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
