--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-  <script src="config.js"></script>
+  <script src="./config.js"></script>
   <script src="./js/app.js"></script>
 </body>
 </html>
